2006-01-09  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/updatetab.cpp :
	* lib/updatetab.h :

	  - Removed unused replace() function.

2006-01-08  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/polbase.cpp :
	* lib/polbase.h :

	  - Added add_tc() function to add ground temporal constraints.

	* lib/rlist.cpp :
	* lib/rlist.h :

	  - Added verify() function.

	  - Added varlist() function.

	  - Fixed is_ground() function to return VLAD_OK instead of a
	    boolean value.

	  - Removed m_ground from rlist as these is no reliable way to
	    keep track of the rels.

	* lib/rel.cpp :
	* lib/rel.h :

	  - Added verify() function.

	  - Fixed is_ground() function to return VLAD_OK instead of a
	    boolean value.

	* lib/tnet.cpp :

	  - add_constraint() now checks whether the given rlist is ground
	    before doing anything.

2006-01-07  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* main/policy.y :

	  - Temporarily calls add_interval to add default interval "today".

	* lib/polbase.cpp :
	* lib/polbase.h :

	  - Removed temporary adding of "default" interval.

	  - Now uses inttab to initialise tnet.

	* lib/tnet.cpp :
	* lib/tnet.h :

	  - Removed unnecessary add_interval() and add_endpoints().

	  - Symbol table reference is now passed once into the object via
	    init().

	* lib/inttab.cpp :
	* lib/inttab.h :

	  - Added a class for storing interval names with endpoints.

	* lib/polbase.cpp :
	* lib/polbase.h :

	  - Added close_rel() to indicate closure of the stage where interval
	    relations can be added.

	  - Added another policy base stage where adding temporal interval
	    relations can be done.

	  - Replaced add_symtab() with add_entity() and 2 add_intervals().

	* main/policy.y :

	  - Temporarily calls close_rel() after the last initially statement.

	  - Now uses add_entity().

2006-01-06  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/atom.h :
	* lib/fact.cpp :
	* lib/fact.h :
	* lib/polbase.cpp :